--- a/src/css/HeaderSection.scss
+++ b/src/css/HeaderSection.scss
@@ -6,7 +6,6 @@ header {
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 0;
   width: 100vw;
   height: $hdr-ht;
   background-color: $clr-dark;
@@ -27,15 +26,19 @@ header {
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     background-color: $clr-primary;
 
-    button {
+    .nav-btn {
+      display: flex;
+      align-items: center;
       outline: none;
       cursor: pointer;
+      align-self: center;
       padding: 0 1rem;
       height: 100%;
       color: #fff;
       font-size: 0.85rem;
-      font-weight: 600;
-      letter-spacing: 0.2rem;
+      font-weight: 800;
+      text-decoration: none;
+      letter-spacing: 0.15rem;
       background-color: $clr-primary;
       border: none;
       border-left: 1px solid rgba(255, 255, 255, 0.5);
