working on adding favorites

--- a/src/css/Gif.scss
+++ b/src/css/Gif.scss
@@ -1,10 +1,18 @@
+@import "./variables.scss";
+
 .gif-wrapper {
   position: relative;
 
-  img {
+  .fav-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 100%;
+    background-color: rgba($clr-dark, 0.85);
+
+    button {
+      padding: 0.25rem 0.5rem;
+    }
   }
-  //   h2 {
-  //     position: absolute;
-  //   }
 }
