--- a/src/css/GifSection.scss
+++ b/src/css/GifSection.scss
@@ -12,4 +12,32 @@
     grid-rows: 112px;
     grid-gap: 0.5rem;
   }
+
+  .load {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0 2rem 0;
+
+    & button {
+      outline: none;
+      width: 40vw;
+      padding: 0.5rem 0;
+      font-size: 0.85rem;
+      color: rgba($clr-medium, 0.65);
+      padding: 0.5rem 1.5rem;
+      border-radius: 2rem;
+      border: 2px solid rgba($clr-medium, 0.25);
+      transition-duration: 0.5s;
+
+      &:hover {
+        cursor: pointer;
+        background-color: rgba($clr-medium, 0.25);
+      }
+
+      &:active {
+        color: #fff;
+        background-color: rgba($clr-medium, 1);
+      }
+    }
+  }
 }
