--- a/src/css/Gif.scss
+++ b/src/css/Gif.scss
@@ -5,14 +5,27 @@
 
   .fav-btn {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-start;
     width: 100%;
     height: 100%;
-    background-color: rgba($clr-dark, 0.85);
 
     button {
-      padding: 0.25rem 0.5rem;
+      outline: none;
+      padding: 0.025rem 0.25rem;
+      font-size: 1.25rem;
+      font-weight: bold;
+      color: #fff;
+      border: none;
+      border-left: 1px solid #fff;
+      border-bottom: 1px solid #fff;
+      border-radius: 0 0 0 0.25rem;
+      background-color: rgba($clr-dark, 0.5);
+
+      &:hover {
+        cursor: pointer;
+        background-color: #4b8bb3;
+      }
     }
   }
 }
