--- a/src/css/Gif.scss
+++ b/src/css/Gif.scss
@@ -21,10 +21,12 @@
       border-bottom: 1px solid #fff;
       border-radius: 0 0 0 0.25rem;
       background-color: rgba($clr-dark, 0.5);
+      transition-duration: 0.75s;
 
       &:hover {
         cursor: pointer;
-        background-color: #4b8bb3;
+        font-size: 2rem;
+        padding: 0.2rem 0.65rem;
       }
     }
   }
