--- a/src/css/FavsPage.scss
+++ b/src/css/FavsPage.scss
@@ -1,5 +1,4 @@
-@import './variables.scss';
-
+/* Sets initial position of header before slideUp animation starts */
 #favs-wrapper header {
   top: 0;
 }
