--- a/src/css/SearchPage.scss
+++ b/src/css/SearchPage.scss
@@ -1,5 +1,6 @@
-@import './variables.scss';
+@import "./variables.scss";
 
+/* Setup for Search page and initial positioning of header */
 #search-wrapper {
   display: flex;
   justify-content: center;
